@@ -1,7 +1,6 @@
 package com.stampcrush.backend.application.coupon;
 
 import com.stampcrush.backend.application.coupon.dto.CafeCustomerFindResultDto;
-import com.stampcrush.backend.application.coupon.dto.CafeCustomersFindResultDto;
 import com.stampcrush.backend.application.coupon.dto.CustomerAccumulatingCouponFindResultDto;
 import com.stampcrush.backend.application.coupon.dto.StampCreateDto;
 import com.stampcrush.backend.entity.cafe.Cafe;
@@ -14,6 +13,8 @@ import com.stampcrush.backend.entity.coupon.CouponStatus;
 import com.stampcrush.backend.entity.reward.Reward;
 import com.stampcrush.backend.entity.user.Customer;
 import com.stampcrush.backend.entity.user.Owner;
+import com.stampcrush.backend.exception.CafeNotFoundException;
+import com.stampcrush.backend.exception.CustomerNotFoundException;
 import com.stampcrush.backend.repository.cafe.CafeCouponDesignRepository;
 import com.stampcrush.backend.repository.cafe.CafePolicyRepository;
 import com.stampcrush.backend.repository.cafe.CafeRepository;
@@ -28,19 +29,18 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
-import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.groupingBy;
 
 @RequiredArgsConstructor
 @Transactional
 @Service
 public class CouponService {
+
+    private static final int DEFAULT_MAX_COUNT = 10;
 
     private final CouponRepository couponRepository;
     private final CafeRepository cafeRepository;
@@ -52,85 +52,52 @@ public class CouponService {
     private final OwnerRepository ownerRepository;
     private final RewardRepository rewardRepository;
 
+    private record CustomerCoupons(Customer customer, List<Coupon> coupons) {
+    }
+
     @Transactional(readOnly = true)
-    public CafeCustomersFindResultDto findCouponsByCafe(Long cafeId) {
-        Cafe cafe = cafeRepository.findById(cafeId)
-                .orElseThrow(() -> new NoSuchElementException("존재하지 않는 카페 입니다."));
+    public List<CafeCustomerFindResultDto> findCouponsByCafe(Long cafeId) {
+        Cafe cafe = findExistingCafe(cafeId);
 
-        Map<Customer, List<Coupon>> couponsByCustomer = mapCouponsByCustomer(cafe);
-        List<CafeCustomerFindResultDto> customers = new ArrayList<>();
-        for (Customer customer : couponsByCustomer.keySet()) {
-            List<Coupon> coupons = couponsByCustomer.get(customer);
+        List<CustomerCoupons> customerCoupons = findCouponsGroupedByCustomers(cafe);
 
-            CustomerInfo customerInfo = statisticsCustomerByCoupons(coupons);
-            addCustomerInfo(customers, customer, customerInfo.stampCount(), customerInfo.rewardCount(), customerInfo.visitCount(), customerInfo.firstVisitDate());
+        List<CafeCustomerFindResultDto> cafeCustomerFindResultDtos = new ArrayList<>();
+        for (CustomerCoupons customerCoupon : customerCoupons) {
+            List<Coupon> coupons = customerCoupon.coupons;
+            CustomerCouponStatistics customerCouponStatistics = CustomerCouponStatistics.produceFrom(coupons);
+            cafeCustomerFindResultDtos.add(CafeCustomerFindResultDto.from(customerCoupon.customer, customerCouponStatistics));
         }
-        return new CafeCustomersFindResultDto(customers);
+
+        return cafeCustomerFindResultDtos;
     }
 
-    private CustomerInfo statisticsCustomerByCoupons(List<Coupon> coupons) {
-        int stampCount = 0;
-        int rewardCount = 0;
-        int visitCount = 0;
-        LocalDateTime firstVisitDate = LocalDateTime.MAX;
-        for (Coupon coupon : coupons) {
-            stampCount = calculateCurrentStampWhenUsingCoupon(stampCount, coupon);
-            rewardCount += addRewardCouponCount(coupon);
-            visitCount += coupon.calculateVisitCount();
-            firstVisitDate = coupon.compareCreatedAtAndReturnEarlier(firstVisitDate);
-        }
-        return new CustomerInfo(stampCount, rewardCount, visitCount, firstVisitDate);
+    private Cafe findExistingCafe(Long cafeId) {
+        return cafeRepository.findById(cafeId)
+                .orElseThrow(() -> new CafeNotFoundException("존재하지 않는 카페 입니다."));
     }
 
-    private record CustomerInfo(int stampCount, int rewardCount, int visitCount, LocalDateTime firstVisitDate) {
-    }
-
-    private Map<Customer, List<Coupon>> mapCouponsByCustomer(Cafe cafe) {
+    private List<CustomerCoupons> findCouponsGroupedByCustomers(Cafe cafe) {
         List<Coupon> coupons = couponRepository.findByCafe(cafe);
-        return coupons.stream()
-                .collect(Collectors.groupingBy(Coupon::getCustomer));
-    }
-
-    private int calculateCurrentStampWhenUsingCoupon(int stampCount, Coupon coupon) {
-        if (coupon.isUsing()) {
-            stampCount = coupon.getStampCount();
-        }
-        return stampCount;
-    }
-
-    private int addRewardCouponCount(Coupon coupon) {
-        if (coupon.isRewarded()) {
-            return 1;
-        }
-        return 0;
-    }
-
-    private void addCustomerInfo(List<CafeCustomerFindResultDto> customers, Customer customer, int stampCount, int rewardCount, int visitCount, LocalDateTime firstVisitDate) {
-        customers.add(new CafeCustomerFindResultDto(
-                customer.getId(),
-                customer.getNickname(),
-                stampCount,
-                rewardCount,
-                visitCount,
-                firstVisitDate,
-                customer.isRegistered(),
-                10
-        ));
+        Map<Customer, List<Coupon>> customerCouponMap = coupons.stream()
+                .collect(groupingBy(Coupon::getCustomer));
+        return customerCouponMap.keySet().stream()
+                .map(iter -> new CustomerCoupons(iter, customerCouponMap.get(iter)))
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public List<CustomerAccumulatingCouponFindResultDto> findAccumulatingCoupon(Long cafeId, Long customerId) {
-        Cafe cafe = cafeRepository.findById(cafeId).orElseThrow(() -> new NoSuchElementException("존재하지 않는 카페 입니다."));
-        Customer customer = customerRepository.findById(customerId).orElseThrow(() -> new NoSuchElementException("존재하지 않는 고객 입니다."));
+        Cafe cafe = cafeRepository.findById(cafeId).orElseThrow(() -> new CustomerNotFoundException("존재하지 않는 카페 입니다."));
+        Customer customer = customerRepository.findById(customerId).orElseThrow(() -> new CustomerNotFoundException("존재하지 않는 고객 입니다."));
 
         List<Coupon> coupons = couponRepository.findByCafeAndCustomerAndStatus(cafe, customer, CouponStatus.ACCUMULATING);
 
         return coupons.stream()
-                .map(coupon -> CustomerAccumulatingCouponFindResultDto.of(
+                .map(coupon -> CustomerAccumulatingCouponFindResultDto.from(
                         coupon,
                         customer,
                         isPrevious(coupon)))
-                .collect(toList());
+                .toList();
     }
 
     private boolean isPrevious(Coupon coupon) {
@@ -165,9 +132,10 @@ public class CouponService {
         CouponPolicy couponPolicy = cafePolicy.copy();
         couponPolicyRepository.save(couponPolicy);
 
-        Coupon coupon = new Coupon(LocalDate.now().plusMonths(couponPolicy.getExpiredPeriod()), customer, cafe, couponDesign, couponPolicy);
-        couponRepository.save(coupon);
-        return coupon;
+        LocalDate expiredDate = LocalDate.now().plusMonths(couponPolicy.getExpiredPeriod());
+
+        Coupon coupon = new Coupon(expiredDate, customer, cafe, couponDesign, couponPolicy);
+        return couponRepository.save(coupon);
     }
 
     public void createStamp(StampCreateDto stampCreateDto) {
